--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "dejurin/php-google-translate-for-free": "^1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "spatie/pdf-to-text": "^1.2",
+        "stichoza/google-translate-php": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
