--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "dejurin/php-google-translate-for-free": "^1.0",
         "fideloper/proxy": "^4.0",
+        "google/cloud-translate": "^1.2",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "spatie/pdf-to-text": "^1.2",
