--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "spatie/pdf-to-text": "^1.2",
-        "stichoza/google-translate-php": "^4.0"
+        "intervention/image": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
